data/derived/comb/progs/unify/prog5664.ml.out
Characters 61-68:
  | h::t -> h n sumList t n;;
                ^^^^^^^
Error: This expression has type
         'a -> ('a -> 'b -> 'c -> 'd -> 'e) list -> int
       but an expression was expected of type 'b
       The type variable 'b occurs inside
       'a -> ('a -> 'b -> 'c -> 'd -> 'e) list -> int
